// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Blog Component > should render blog cards when data is loaded 1`] = `
<div>
  <div
    class="blog"
  >
    <section
      class="blog__section section"
    >
      <div
        class="blog__container container container--lg"
      >
        <div
          class="blog__body"
        >
          <div
            class="blog__top"
          >
            <h2
              class="blog__title section-title"
            >
              Read our blog
            </h2>
            <a
              class="link link--green link--icon"
              data-discover="true"
              data-testid="routerLinkTestId"
              href="/blog-catalog"
            >
              All articles
              <svg
                data-testid="rightIconLinkTestId"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                />
              </svg>
            </a>
          </div>
          <div
            class="blog__content"
          >
            <div
              data-testid="blogCardTestId"
            >
              Test Article Title
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Blog Component > should render skeletons when isLoading is true 1`] = `
<div>
  <div
    class="blog"
  >
    <section
      class="blog__section section"
    >
      <div
        class="blog__container container container--lg"
      >
        <div
          class="blog__body"
        >
          <div
            class="blog__top"
          >
            <h2
              class="blog__title section-title"
            >
              Read our blog
            </h2>
            <a
              class="link link--green link--icon"
              data-discover="true"
              data-testid="routerLinkTestId"
              href="/blog-catalog"
            >
              All articles
              <svg
                data-testid="rightIconLinkTestId"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                />
              </svg>
            </a>
          </div>
          <div
            class="blog__content"
          >
            <div
              data-testid="blogCardSkeletonTestId"
            >
              Skeleton
            </div>
            <div
              data-testid="blogCardSkeletonTestId"
            >
              Skeleton
            </div>
            <div
              data-testid="blogCardSkeletonTestId"
            >
              Skeleton
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
